--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="app.css">
-    <script src="app.js" defer></script>
+    <link rel="stylesheet" href="css/app.css">
+    <script src="js/app.js" defer></script>
   </head>
   <body>
     <header>
