added filler cards to prototype main section feel

--- a/index.html
+++ b/index.html
@@ -49,35 +49,230 @@
         <main class="container">
           <!--politics section-->
           <section class="politics">
-            <h2 class="display-3">politics</h2>
-            <hr class="my-4">
+            <h2 class="display-3 ps-4 fw-bold mb-4">politics</h2>
+            <!-- <hr class="my-4"> -->
             <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4">
               <div class="card">
                 <div class="img-section">
                   <img src="images/fire.jpg" class="card-img-top" alt="...">
                 </div>
                 <div class="card-body px-0">
-                  <h3>Big fire</h2>
-                    <p class="card-text">
-                      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
-                      explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
-                      amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
-                      perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
-                      doloribus, ipsam omnis consectetur!
-                    </p>
-                    <div class="date text-secondary">2026-01-22</div>
-                    <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
                 </div>
               </div>
             </div>
           </section>
           <!--sports section-->
           <section class="sports">
-
+            <hr class="my-4">
+            <h2 class="display-3 ps-4 mb-4 fw-bold">sports</h2>
+            <!-- <hr class="my-4"> -->
+            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4">
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+            </div>
           </section>
           <!--entertainment section-->
           <section class="entertainment">
-
+            <hr class="my-4">
+            <h2 class="display-3 ps-4 mb-4 fw-bold">entertainment</h2>
+            <!-- <hr class="my-4"> -->
+            <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4">
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="img-section">
+                  <img src="images/fire.jpg" class="card-img-top" alt="...">
+                </div>
+                <div class="card-body px-0">
+                  <h3>Big fire</h3>
+                  <p class="card-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium illo
+                    explicabo harum optio qui porro quidem corporis necessitatibus ipsam ex! Lorem ipsum dolor sit
+                    amet consectetur adipisicing elit. Magnam quaerat, rem iusto fuga dolore, molestias nihil,
+                    perferendis fugiat architecto voluptate officiis unde. Repudiandae voluptatibus delectus cumque
+                    doloribus, ipsam omnis consectetur!
+                  </p>
+                  <div class="date text-secondary">2026-01-22</div>
+                  <div><img src="images/bbc.png" alt="bbc logo" style="width: 100px;"></div>
+                </div>
+              </div>
+            </div>
           </section>
         </main>
       </div>
