added navbar item and readjusted layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-secondary-subtle mb-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand ms-5" href="#">
           <img src="images/news.svg" alt="Logo" width="50" class="d-inline-block align-text-middle" />
           News Center
         </a>
@@ -27,15 +27,18 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav nav-underline ms-auto me-auto d-flex gap-5">
-            <li class="nav-item">
+          <ul class="navbar-nav nav-underline ms-3 w-25 d-flex gap-5 justify-content-around">
+            <li class="nav-item fw-bold">
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item fw-bold">
               <a class="nav-link" href="#">Matches</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item fw-bold">
               <a class="nav-link" href="#">Standings</a>
+            </li>
+            <li class="nav-item fw-bold">
+              <a class="nav-link" href="#">Stats</a>
             </li>
           </ul>
         </div>
