added prototype weather and currency section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <div>
     <div class="row">
       <!--main section-->
-      <div class="col-9">
+      <div class="col-12 col-md-9">
         <main class="container">
           <!--politics section-->
           <section class="politics">
@@ -280,9 +280,26 @@
         </main>
       </div>
       <!--aside section-->
-      <div class="col-3 shadow-sm min-vh-100">
+      <div class="col-md-3 shadow-sm min-vh-100 d-none d-md-block">
         <aside>
-
+          <div class="container text-center">
+            <section class="weather">
+              <div class="weather-img-block">
+                <img src="images/day_rain.svg" alt="weather icon">
+              </div>
+              <p class="weather-temp fs-1 my-1">43°</p>
+              <p class="weather-location fs-5">Cairo, Egypt</p>
+            </section>
+            <hr class="mb-3">
+            <section class="currency">
+              <p class="fs-2">32.2 USD/EGP</p>
+              <p class="fs-2">40.1 SAR/EGP</p>
+            </section>
+            <hr class="mb-3">
+            <section class="live-matches">
+              
+            </section>
+          </div>
         </aside>
       </div>
     </div>
