added initial live matches prototype

--- a/index.html
+++ b/index.html
@@ -296,8 +296,31 @@
               <p class="fs-2">40.1 SAR/EGP</p>
             </section>
             <hr class="mb-3">
-            <section class="live-matches">
-              
+            <section class="live-match">
+              <div class="live-match-section bg-body-tertiary p-2 rounded shadow">
+                <div class="live-match-tournament d-flex">
+                  <img src="images/league.png" alt="league icon" height="30px">
+                  <p>Premier Leage</p>
+                </div>
+                <div class="live-match-body container row row-cols-3 text-center">
+                  <div class="live-match-first-team pt-4">
+                    <img src="images/Arsenal_FC.png" height="80px" alt="team logo">
+                    <p>Arsenal</p>
+                  </div>
+                  <div class="live-match-score-section">
+                    <p class="match-section-score display-2">1:0</p>
+                    <p class="match-section-score-home text-secondary rounded-3">(1:1)</p>
+                    <div class="match-section-live">
+                      <p class="live-now-time fs-3">65:00</p>
+                      <p class="live-now fs-2 text-danger">live!</p>
+                    </div>
+                  </div>
+                  <div class="live-match-second-team pt-4">
+                    <img src="images/chelsea.png" height="80px" alt="team logo">
+                    <p>Chelsea</p>
+                  </div>
+                </div>
+              </div>
             </section>
           </div>
         </aside>
