--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
         </main>
       </div>
       <!--aside section-->
-      <div class="col-md-3 shadow-sm min-vh-100 d-none d-md-block">
-        <aside>
-          <div class="container text-center">
+      <div class="col-md-3 shadow-sm d-none d-md-block">
+        <aside class="">
+          <div class="d-flex flex-column justify-content-between align-content-center text-center">
             <section class="weather">
               <div class="weather-img-block">
                 <img src="images/day_rain.svg" alt="weather icon">
@@ -298,25 +298,27 @@
             <hr class="mb-3">
             <section class="live-match">
               <div class="live-match-section bg-body-tertiary p-2 rounded shadow">
-                <div class="live-match-tournament d-flex">
-                  <img src="images/league.png" alt="league icon" height="30px">
-                  <p>Premier Leage</p>
+                <div class="live-match-tournament d-flex justify-content-between">
+                  <div class="d-flex">
+                    <img src="images/league.png" alt="league icon" height="30px">
+                    <p class="ms-2">Premier Leage</p>
+                  </div>
+                  <span class="badge rounded-pill text-bg-danger align-self-baseline py-2 px-3">live</span>
                 </div>
-                <div class="live-match-body container row row-cols-3 text-center">
-                  <div class="live-match-first-team pt-4">
-                    <img src="images/Arsenal_FC.png" height="80px" alt="team logo">
+                <div class="live-match-body w-100 row gx-3 justify-content-center text-center">
+                  <div class="live-match-first-team pt-3 col col-md-3">
+                    <img src="images/Arsenal_FC.png" class="img-fluid" alt="team logo">
                     <p>Arsenal</p>
                   </div>
-                  <div class="live-match-score-section">
-                    <p class="match-section-score display-2">1:0</p>
-                    <p class="match-section-score-home text-secondary rounded-3">(1:1)</p>
+                  <div class="live-match-score-section col col-md-4">
+                    <p class="match-section-score display-2 fw-bold mb-0">1:0</p>
+                    <p class="match-section-score-home text-secondary rounded-3 ">(1:1)</p>
                     <div class="match-section-live">
-                      <p class="live-now-time fs-3">65:00</p>
-                      <p class="live-now fs-2 text-danger">live!</p>
+                      <p class="match-section-time fs-4 fw-bold">65:21</p>
                     </div>
                   </div>
-                  <div class="live-match-second-team pt-4">
-                    <img src="images/chelsea.png" height="80px" alt="team logo">
+                  <div class="live-match-second-team pt-3 col col-md-3">
+                    <img src="images/chelsea.png" class="img-fluid" alt="team logo">
                     <p>Chelsea</p>
                   </div>
                 </div>
