--- a/index.html
+++ b/index.html
@@ -305,7 +305,8 @@
                   </div>
                   <span class="badge rounded-pill text-bg-danger align-self-baseline py-2 px-3">live</span>
                 </div>
-                <div class="live-match-body w-100 row gx-3 justify-content-center text-center">
+                <div
+                  class="live-match-body d-flex flex-column flex-xxl-row gx-0 gx-xxl-3 justify-content-center align-items-center text-center ">
                   <div class="live-match-first-team pt-3 col col-md-3">
                     <img src="images/Arsenal_FC.png" class="img-fluid" alt="team logo">
                     <p>Arsenal</p>
