created matches html and added navbar to it, added anchor links to HOME and MATCHES nav links

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav nav-underline ms-3 w-25 d-flex gap-5 justify-content-around">
             <li class="nav-item fw-bold">
-              <a class="nav-link" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item fw-bold">
-              <a class="nav-link" href="#">Matches</a>
+              <a class="nav-link" href="matches.html~">Matches</a>
             </li>
             <li class="nav-item fw-bold">
               <a class="nav-link" href="#">Standings</a>
