made matches page prototype

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item fw-bold">
-              <a class="nav-link" href="matches.html~">Matches</a>
+              <a class="nav-link" href="matches.html">Matches</a>
             </li>
             <li class="nav-item fw-bold">
               <a class="nav-link" href="#">Standings</a>
@@ -306,20 +306,18 @@
                   <span class="badge rounded-pill text-bg-danger align-self-baseline py-2 px-3">live</span>
                 </div>
                 <div
-                  class="live-match-body d-flex flex-column flex-xxl-row gx-0 gx-xxl-3 justify-content-center align-items-center text-center ">
+                  class="live-match-body d-flex flex-column flex-xxl-row justify-content-center align-items-center text-center ">
                   <div class="live-match-first-team pt-3 col col-md-3">
-                    <img src="images/Arsenal_FC.png" class="img-fluid" alt="team logo">
+                    <img src="images/Arsenal_FC.png" class="w-75" alt="team logo">
                     <p>Arsenal</p>
                   </div>
-                  <div class="live-match-score-section col col-md-4">
-                    <p class="match-section-score display-2 fw-bold mb-0">1:0</p>
-                    <p class="match-section-score-home text-secondary rounded-3 ">(1:1)</p>
-                    <div class="match-section-live">
-                      <p class="match-section-time fs-4 fw-bold">65:21</p>
-                    </div>
+                  <div class="live-match-score-section col col-md-4 h-100 w-auto px-3">
+                    <p class="match-section-score fs-1 fw-bold m-0">1:0</p>
+                    <p class="match-section-score-home text-secondary rounded-3 m-0">(1:1)</p>
+                    <p class="match-section-live-time fs-4 fw-bold m-0">65:21</p>
                   </div>
                   <div class="live-match-second-team pt-3 col col-md-3">
-                    <img src="images/chelsea.png" class="img-fluid" alt="team logo">
+                    <img src="images/chelsea.png" class="w-75" alt="team logo">
                     <p>Chelsea</p>
                   </div>
                 </div>
